samples/_failures_safe/1761793174_b01018_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0af4ea0.c: In function ‘main’:
./samples/SAFE/__tmp_d0af4ea0.c:182:5: error: expected expression at end of input
  182 |     if (
      |     ^~
./samples/SAFE/__tmp_d0af4ea0.c:182:5: error: expected declaration or statement at end of input
